# StartGov

./: README.md
automacao/usandoNode/: index.js  package-lock.json  package.json  scrapping.js  server.js  test.js
firstproject/: README.md  pyproject.toml
firstproject/knowledge/: user_preference.txt
firstproject/src/firstproject/: crew.py  main.py
firstproject/src/firstproject/config/: agents.yaml  tasks.yaml
firstproject/src/firstproject/tools/: custom_tool.py
login/: .gitignore  main.py
