[project]
name = "firstproject"
version = "0.1.0"
description = "FirstProject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
firstproject = "firstproject.main:run"
run_crew = "firstproject.main:run"
train = "firstproject.main:train"
replay = "firstproject.main:replay"
test = "firstproject.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
